[fix] remove test package dep

--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "commander": "^8.1.0",
     "date-fns": "^2.23.0",
     "log4js": "^6.3.0",
-    "netkeiba": "github:masan4444/node-netkeiba#feature/library",
-    "test-package": "git+ssh://git@github.com/masan4444/test-package.git"
+    "netkeiba": "github:masan4444/node-netkeiba#feature/library"
   }
 }
