--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "masan4444",
   "license": "ISC",
   "devDependencies": {
+    "@types/cli-progress": "^3.9.2",
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^7.3.3",
     "@types/node": "^14.17.9",
@@ -53,6 +54,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "cli-progress": "^3.9.0",
     "commander": "^8.1.0",
     "date-fns": "^2.23.0",
     "inquirer": "^8.1.2",
